sidebar is 100vh; move the footer to the bottom of the main area; fix scrolling in Chrome
fixes #1051

The footer is now a child of the <main> tag, beneath the question or
infopage content.

The side nav is exactly 100vh high, and the question list expands to
fill the available space.

Chrome continues to do weird things with scrolling. The <html> tag
by default scrolls when the question content is longer than the
viewport, which must be a bug. This commit adds `html {overflow:hidden}`
to prevent this, and also hides scrollbars in print media just to be
sure.

<p> and <pre> tags no longer have a max width in print media.

The top nav takes `min-content` vertical space; before this, something
was making it take a lot of empty space.

The progress bar above the question list is much shorter.

The introduction is now displayed like a question, with the side or top
nav.

When the top nav is visible, pressing the backwards button from the
first question moves to the introduction, if there is one, and pressing
the forwards button from the introduction moves back to the last-viewed
question (which should be the first question, if you're just using the
arrows to move).

--- a/themes/default/files/resources/exam.css
+++ b/themes/default/files/resources/exam.css
@@ -13,6 +13,9 @@ Copyright 2011-16 Newcastle University
    See the License for the specific language governing permissions and
    limitations under the License.
 */
+html {
+    overflow: hidden;
+}
 body > #no-stylesheet {
     display: none;
 }
@@ -28,8 +31,10 @@ input, select {
     color: var(--text-colour);
 }
 
-p, pre {
-    max-width: 80ch;
+@media screen {
+    p, pre {
+        max-width: 80ch;
+    }
 }
 
 code,
@@ -57,6 +62,9 @@ samp {
     }
 }
 @media print {
+    ::-webkit-scrollbar {
+        display: none;
+    }
     .invisible:not(.print-visible) {
         position: absolute !important;
         left: -2000000px;
@@ -186,10 +194,15 @@ img, object[type*="image"] {
 
 #everything {
 	overflow-x: hidden;
+    overflow-y: hidden;
 	display: grid;
     grid-template: "main";
     grid-gap: var(--spacing);
-    min-height: 100vh;
+}
+@media screen {
+    #everything {
+        height: 100vh;
+    }
 }
 body.show-nav #everything {
 	grid-template: "navMenu main" / 300px;
@@ -199,7 +212,6 @@ body.show-nav #everything {
 }
 #everything > main {
     grid-area: main;
-    max-width: 1170px;
 }
 body.navigate-menu #everything > main,
 body.info-page #everything > main {
@@ -212,12 +224,23 @@ body.info-page #everything > main {
 }
 body.navigate-menu.show-nav #everything {
     grid-template:
-        "topNav"
-        "main"
+        "topNav" min-content
+        "main" 1fr
     ;
+    grid-gap: 0;
 }
 body.navigate-menu.show-nav #everything > #topNav {
     display: block;
+}
+
+#everything > main > #questionContainer,
+#everything > main > #infoDisplay {
+    max-width: 1170px;
+}
+#navMenu-wrapper {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
 }
 
 #topNav .nav {
@@ -270,9 +293,10 @@ body.navigate-menu.show-nav #everything > #topNav {
 
     body.show-nav:not(.show-sidebar) #everything {
         grid-template: 
-            "topNav"
-            "main"
+            "topNav" min-content
+            "main" 1fr
         ;
+        grid-gap: 0;
     }
     body.show-nav:not(.show-sidebar) #everything > #navMenu {
         display: none;
@@ -368,6 +392,7 @@ input.jme {
 	vertical-align: middle;
 	max-width: 100%;
 	overflow-x: auto;
+    overflow-y: hidden;
 }
 #everything .matrix-input thead th {
     background: none;
@@ -437,6 +462,7 @@ input.jme {
 .mainDisplay {
 	margin: 0 0;
 	overflow-x: hidden;
+    overflow-y: auto;
 }
 
 .feedback-icon {
@@ -536,16 +562,16 @@ input.jme {
 
 #exam-progress {
     width: 100%;
-    margin-bottom: 0em;
-    height: 1em;
+    margin: 0;
+    height: 0.3em;
     display: block;
 }
 
 #questionList {
-    max-height: 20em;
     overflow-y: auto;
     box-shadow: inset 0px 0.5em 0.5em -0.5em black, inset 0px -1em 1em -1em black;
     padding: var(--spacing) 0;
+    flex-grow: 1;
 }
 
 #questionList .question-group-header h2 {
@@ -1284,6 +1310,10 @@ input[type=text], input[type=number] {
         display: none;
     }
 
+    body.show-nav #everything {
+        grid-template: "main";
+    }
+
     #standalone-warning {
         display: none;
     }
@@ -1346,4 +1376,3 @@ input[type=text], input[type=number] {
 		overflow-y: hidden;
 	}
 }
-
